prod/tekton/tekton-gateway.yaml
apiVersion: gateway.kubesphere.io/v1alpha1
kind: Gateway
metadata:
  name: kubesphere-router-tekton-pipelines
  namespace: kubesphere-controls-system
spec:
  controller:
    replicas: 1
    scope:
      enabled: true
      namespace: tekton-pipelines
  deployment:
    annotations:
      servicemesh.kubesphere.io/enabled: "false"
    replicas: 1
  service:
    type: NodePort
