prod/tekton/tekton-dashboard-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: tekton-dashboard-ingress
  namespace: tekton-pipelines
spec:
  rules:
    - host: tekton-dashboard.tekton-pipelines.103.61.37.25.nip.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
